# NomadicSphere2

./: CMakeLists.txt  Database.cc  Database.h  Image.cc  Image.h  LICENSE.txt  README.md  conanfile.txt  locale_en.h  locale_pl.h  main.cc  test.cc
test_data/: 1.txt
